--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.46
 loader_version=0.11.6
 # Mod Properties
-mod_version=1.0
+mod_version=1.1-Fabric1.17
 maven_group=pl.devlisuu
 archives_base_name=prettycapes
 # Dependencies
