--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.46
-loader_version=0.11.6
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.18
+loader_version=0.12.12
 # Mod Properties
-mod_version=1.2-Fabric1.17
+mod_version=1.3-1.18.1
 maven_group=pl.devlisuu
 archives_base_name=prettycapes
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.39.1+1.17
