--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,5 @@ mod_version=2.0-1.18.2
 maven_group=pl.devlisuu
 archives_base_name=elytracapes
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
+cloth_config_version=6.2.62
+mod_menu_version=3.2.2
